fix:users profile info not showing

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -79,7 +79,7 @@
   * {
     @apply border-border;
     scrollbar-width: thin;
-    scrollbar-color: #8a8a8a00 transparent;
+    scrollbar-color: #8a8a8a27 transparent;
 
     &:hover {
       scrollbar-color: #8a8a8a65 transparent;
